--- a/pod-security-cel/baseline/disallow-selinux/disallow-selinux.yaml
+++ b/pod-security-cel/baseline/disallow-selinux/disallow-selinux.yaml
@@ -23,11 +23,6 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          Setting the SELinux type is restricted. The fields
-          spec.securityContext.seLinuxOptions.type, spec.containers[*].securityContext.seLinuxOptions.type,
-          , spec.initContainers[*].securityContext.seLinuxOptions, and spec.ephemeralContainers[*].securityContext.seLinuxOptions.type
-          must either be unset or set to one of the allowed values (container_t, container_init_t, or container_kvm_t).
         cel:
           expressions:
             - expression: >- 
@@ -37,6 +32,9 @@ spec:
                 object.spec.securityContext.seLinuxOptions.type == 'container_t' ||
                 object.spec.securityContext.seLinuxOptions.type == 'container_init_t' ||
                 object.spec.securityContext.seLinuxOptions.type == 'container_kvm_t'
+              message: >-
+                Setting the SELinux type is restricted. The field spec.securityContext.seLinuxOptions.type 
+                must either be unset or set to one of the allowed values (container_t, container_init_t, or container_kvm_t).
 
             - expression: >-
                 object.spec.containers.all(container, !has(container.securityContext) ||
@@ -45,6 +43,9 @@ spec:
                 container.securityContext.seLinuxOptions.type == 'container_t' ||
                 container.securityContext.seLinuxOptions.type == 'container_init_t' ||
                 container.securityContext.seLinuxOptions.type == 'container_kvm_t')
+              message: >-
+                Setting the SELinux type is restricted. The field spec.containers[*].securityContext.seLinuxOptions.type 
+                must either be unset or set to one of the allowed values (container_t, container_init_t, or container_kvm_t).
 
             - expression: >- 
                 !has(object.spec.initContainers) ||
@@ -54,6 +55,9 @@ spec:
                 container.securityContext.seLinuxOptions.type == 'container_t' ||
                 container.securityContext.seLinuxOptions.type == 'container_init_t' ||
                 container.securityContext.seLinuxOptions.type == 'container_kvm_t')
+              message: >-
+                Setting the SELinux type is restricted. The field spec.initContainers[*].securityContext.seLinuxOptions.type 
+                must either be unset or set to one of the allowed values (container_t, container_init_t, or container_kvm_t).
 
             - expression: >- 
                 !has(object.spec.ephemeralContainers) ||
@@ -63,6 +67,9 @@ spec:
                 container.securityContext.seLinuxOptions.type == 'container_t' ||
                 container.securityContext.seLinuxOptions.type == 'container_init_t' ||
                 container.securityContext.seLinuxOptions.type == 'container_kvm_t')
+              message: >-
+                Setting the SELinux type is restricted. The field spec.ephemeralContainers[*].securityContext.seLinuxOptions.type 
+                must either be unset or set to one of the allowed values (container_t, container_init_t, or container_kvm_t).
     - name: selinux-user-role
       match:
         any:
@@ -70,33 +77,38 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          Setting the SELinux user or role is forbidden. The fields
-          spec.securityContext.seLinuxOptions.user, spec.securityContext.seLinuxOptions.role,
-          spec.containers[*].securityContext.seLinuxOptions.user, spec.containers[*].securityContext.seLinuxOptions.role,
-          spec.initContainers[*].securityContext.seLinuxOptions.user, spec.initContainers[*].securityContext.seLinuxOptions.role,
-          spec.ephemeralContainers[*].securityContext.seLinuxOptions.user, and spec.ephemeralContainers[*].securityContext.seLinuxOptions.role
-          must be unset.
         cel:
           expressions:
             - expression: >- 
                 !has(object.spec.securityContext) ||
                 !has(object.spec.securityContext.seLinuxOptions) ||
                 (!has(object.spec.securityContext.seLinuxOptions.user) && !has(object.spec.securityContext.seLinuxOptions.role))
+              message: >-
+                Setting the SELinux user or role is forbidden. The fields
+                spec.securityContext.seLinuxOptions.user and spec.securityContext.seLinuxOptions.role must be unset.
 
             - expression: >- 
                 object.spec.containers.all(container, !has(container.securityContext) ||
                 !has(container.securityContext.seLinuxOptions) ||
                 (!has(container.securityContext.seLinuxOptions.user) && !has(container.securityContext.seLinuxOptions.role)))
+              message: >-
+                Setting the SELinux user or role is forbidden. The fields
+                spec.containers[*].securityContext.seLinuxOptions.user and spec.containers[*].securityContext.seLinuxOptions.role must be unset.
 
             - expression: >- 
                 !has(object.spec.initContainers) ||
                 object.spec.initContainers.all(container, !has(container.securityContext) ||
                 !has(container.securityContext.seLinuxOptions) ||
                 (!has(container.securityContext.seLinuxOptions.user) && !has(container.securityContext.seLinuxOptions.role)))
+              message: >-
+                Setting the SELinux user or role is forbidden. The fields
+                spec.initContainers[*].securityContext.seLinuxOptions.user and spec.initContainers[*].securityContext.seLinuxOptions.role must be unset.
 
             - expression: >- 
                 !has(object.spec.ephemeralContainers) ||
                 object.spec.ephemeralContainers.all(container, !has(container.securityContext) ||
                 !has(container.securityContext.seLinuxOptions) ||
                 (!has(container.securityContext.seLinuxOptions.user) && !has(container.securityContext.seLinuxOptions.role)))
+              message: >-
+                Setting the SELinux user or role is forbidden. The fields
+                spec.ephemeralContainers[*].securityContext.seLinuxOptions.user and spec.ephemeralContainers[*].securityContext.seLinuxOptions.role must be unset.
