--- a/pod-security-cel/baseline/restrict-seccomp/restrict-seccomp.yaml
+++ b/pod-security-cel/baseline/restrict-seccomp/restrict-seccomp.yaml
@@ -24,13 +24,6 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          Use of custom Seccomp profiles is disallowed. The fields
-          spec.securityContext.seccompProfile.type,
-          spec.containers[*].securityContext.seccompProfile.type,
-          spec.initContainers[*].securityContext.seccompProfile.type, and
-          spec.ephemeralContainers[*].securityContext.seccompProfile.type
-          must be unset or set to `RuntimeDefault` or `Localhost`.
         cel:
           expressions:
             - expression: >- 
@@ -39,6 +32,9 @@ spec:
                 !has(object.spec.securityContext.seccompProfile.type) ||
                 object.spec.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                 object.spec.securityContext.seccompProfile.type == 'Localhost'
+              message: >-
+                Use of custom Seccomp profiles is disallowed. The field
+                spec.securityContext.seccompProfile.type must be unset or set to `RuntimeDefault` or `Localhost`.
 
             - expression: >- 
                 object.spec.containers.all(container, !has(container.securityContext) ||
@@ -46,6 +42,9 @@ spec:
                 !has(container.securityContext.seccompProfile.type) ||
                 container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                 container.securityContext.seccompProfile.type == 'Localhost')
+              message: >-
+                Use of custom Seccomp profiles is disallowed. The field
+                spec.containers[*].securityContext.seccompProfile.type must be unset or set to `RuntimeDefault` or `Localhost`.
 
             - expression: >- 
                 !has(object.spec.initContainers) ||
@@ -54,6 +53,9 @@ spec:
                 !has(container.securityContext.seccompProfile.type) ||
                 container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                 container.securityContext.seccompProfile.type == 'Localhost')
+              message: >-
+                Use of custom Seccomp profiles is disallowed. The field
+                spec.initContainers[*].securityContext.seccompProfile.type must be unset or set to `RuntimeDefault` or `Localhost`.
 
             - expression: >- 
                 !has(object.spec.ephemeralContainers) ||
@@ -62,3 +64,6 @@ spec:
                 !has(container.securityContext.seccompProfile.type) ||
                 container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                 container.securityContext.seccompProfile.type == 'Localhost')
+              message: >-
+                Use of custom Seccomp profiles is disallowed. The field
+                spec.ephemeralContainers[*].securityContext.seccompProfile.type must be unset or set to `RuntimeDefault` or `Localhost`.
