--- a/pod-security-cel/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
+++ b/pod-security-cel/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
@@ -23,28 +23,31 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          Privilege escalation is disallowed. The fields
-          spec.containers[*].securityContext.allowPrivilegeEscalation,
-          spec.initContainers[*].securityContext.allowPrivilegeEscalation,
-          and spec.ephemeralContainers[*].securityContext.allowPrivilegeEscalation
-          must be set to `false`.
         cel:
           expressions:
             - expression: >- 
                 object.spec.containers.all(container, has(container.securityContext) &&
                 has(container.securityContext.allowPrivilegeEscalation) &&
                 container.securityContext.allowPrivilegeEscalation == false)
+              message: >-
+                Privilege escalation is disallowed. The field
+                spec.containers[*].securityContext.allowPrivilegeEscalation must be set to `false`.
 
             - expression: >- 
                 !has(object.spec.initContainers) ||
                 object.spec.initContainers.all(container, has(container.securityContext) &&
                 has(container.securityContext.allowPrivilegeEscalation) &&
                 container.securityContext.allowPrivilegeEscalation == false)
+              message: >-
+                Privilege escalation is disallowed. The field
+                spec.initContainers[*].securityContext.allowPrivilegeEscalation must be set to `false`.
 
             - expression: >- 
                 !has(object.spec.ephemeralContainers) ||
                 object.spec.ephemeralContainers.all(container, has(container.securityContext) &&
                 has(container.securityContext.allowPrivilegeEscalation) &&
                 container.securityContext.allowPrivilegeEscalation == false)
+              message: >-
+                Privilege escalation is disallowed. The field
+                spec.ephemeralContainers[*].securityContext.allowPrivilegeEscalation must be set to `false`.
                    
