--- a/pod-security-cel/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
+++ b/pod-security-cel/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
@@ -23,31 +23,38 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          Running as root is not allowed. The fields spec.securityContext.runAsUser,
-          spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser,
-          and spec.ephemeralContainers[*].securityContext.runAsUser must be unset or
-          set to a number greater than zero.
         cel:
           expressions:
             - expression: >-
                 !has(object.spec.securityContext) ||
                 !has(object.spec.securityContext.runAsUser) ||
                 object.spec.securityContext.runAsUser > 0
+              message: >-
+                Running as root is not allowed. The field spec.securityContext.runAsUser must be unset or
+                set to a number greater than zero.
 
             - expression: >-
                 object.spec.containers.all(container, !has(container.securityContext) ||
                 !has(container.securityContext.runAsUser) ||
                 container.securityContext.runAsUser > 0)
+              message: >-
+                Running as root is not allowed. The field spec.containers[*].securityContext.runAsUser must be unset or
+                set to a number greater than zero
 
             - expression: >-
                 !has(object.spec.initContainers) ||
                 object.spec.initContainers.all(container, !has(container.securityContext) ||
                 !has(container.securityContext.runAsUser) ||
                 container.securityContext.runAsUser > 0)
+              message: >-
+                Running as root is not allowed. The field spec.initContainers[*].securityContext.runAsUser must be unset or
+                set to a number greater than zero
 
             - expression: >-
                 !has(object.spec.ephemeralContainers) ||
                 object.spec.ephemeralContainers.all(container, !has(container.securityContext) ||
                 !has(container.securityContext.runAsUser) ||
                 container.securityContext.runAsUser > 0)
+              message: >-
+                Running as root is not allowed. The field spec.ephemeralContainers[*].securityContext.runAsUser must be unset or
+                set to a number greater than zero
