--- a/pod-security-cel/restricted/restrict-seccomp-strict/restrict-seccomp-strict.yaml
+++ b/pod-security-cel/restricted/restrict-seccomp-strict/restrict-seccomp-strict.yaml
@@ -26,13 +26,6 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          Use of custom Seccomp profiles is disallowed. The fields
-          spec.securityContext.seccompProfile.type,
-          spec.containers[*].securityContext.seccompProfile.type,
-          spec.initContainers[*].securityContext.seccompProfile.type, and
-          spec.ephemeralContainers[*].securityContext.seccompProfile.type
-          must be set to `RuntimeDefault` or `Localhost`.
         cel:
           expressions:
             - expression: >- 
@@ -41,6 +34,9 @@ spec:
                 !has(object.spec.securityContext.seccompProfile.type) ||
                 object.spec.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                 object.spec.securityContext.seccompProfile.type == 'Localhost'
+              message: >-
+                Use of custom Seccomp profiles is disallowed. The field
+                spec.securityContext.seccompProfile.type must be set to `RuntimeDefault` or `Localhost`.
       
             - expression: >- 
                 object.spec.containers.all(container, !has(container.securityContext) ||
@@ -48,6 +44,9 @@ spec:
                 !has(container.securityContext.seccompProfile.type) ||
                 container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                 container.securityContext.seccompProfile.type == 'Localhost')
+              message: >-
+                Use of custom Seccomp profiles is disallowed. The field
+                spec.containers[*].securityContext.seccompProfile.type must be set to `RuntimeDefault` or `Localhost`.
               
             - expression: >- 
                 !has(object.spec.initContainers) ||
@@ -56,6 +55,9 @@ spec:
                 !has(container.securityContext.seccompProfile.type) ||
                 container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                 container.securityContext.seccompProfile.type == 'Localhost')
+              message: >-
+                Use of custom Seccomp profiles is disallowed. The field
+                spec.initContainers[*].securityContext.seccompProfile.type must be set to `RuntimeDefault` or `Localhost`.
 
             - expression: >- 
                 !has(object.spec.ephemeralContainers) ||
@@ -64,3 +66,6 @@ spec:
                 !has(container.securityContext.seccompProfile.type) ||
                 container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                 container.securityContext.seccompProfile.type == 'Localhost')
+              message: >-
+                Use of custom Seccomp profiles is disallowed. The field
+                spec.ephemeralContainers[*].securityContext.seccompProfile.type must be set to `RuntimeDefault` or `Localhost`.
