fix the name field in artifacthub-pkg.yml for PSS CEL policies
Signed-off-by: Mariam Fahmy <mariam.fahmy@nirmata.com>

--- a/pod-security-cel/baseline/disallow-capabilities/artifacthub-pkg.yml
+++ b/pod-security-cel/baseline/disallow-capabilities/artifacthub-pkg.yml
@@ -1,4 +1,4 @@
-name: disallow-capabilities
+name: disallow-capabilities-cel
 version: 1.0.0
 displayName: Disallow Capabilities in CEL expressions
 description: >-
