--- a/pod-security-cel/baseline/disallow-host-path/artifacthub-pkg.yml
+++ b/pod-security-cel/baseline/disallow-host-path/artifacthub-pkg.yml
@@ -1,4 +1,4 @@
-name: disallow-host-path
+name: disallow-host-path-cel
 version: 1.0.0
 displayName: Disallow hostPath in CEL expressions
 description: >-
