--- a/pod-security-cel/baseline/disallow-host-ports/artifacthub-pkg.yml
+++ b/pod-security-cel/baseline/disallow-host-ports/artifacthub-pkg.yml
@@ -1,4 +1,4 @@
-name: disallow-host-ports
+name: disallow-host-ports-cel
 version: 1.0.0
 displayName: Disallow hostPorts in CEL expressions
 description: >-
