--- a/pod-security-cel/baseline/disallow-host-process/artifacthub-pkg.yml
+++ b/pod-security-cel/baseline/disallow-host-process/artifacthub-pkg.yml
@@ -1,4 +1,4 @@
-name: disallow-host-process
+name: disallow-host-process-cel
 version: 1.0.0
 displayName: Disallow hostProcess in CEL expressions
 description: >-
