--- a/pod-security-cel/baseline/disallow-proc-mount/artifacthub-pkg.yml
+++ b/pod-security-cel/baseline/disallow-proc-mount/artifacthub-pkg.yml
@@ -1,4 +1,4 @@
-name: disallow-proc-mount
+name: disallow-proc-mount-cel
 version: 1.0.0
 displayName: Disallow procMount in CEL expressions
 description: >-
