--- a/pod-security-cel/baseline/disallow-selinux/artifacthub-pkg.yml
+++ b/pod-security-cel/baseline/disallow-selinux/artifacthub-pkg.yml
@@ -1,4 +1,4 @@
-name: disallow-selinux
+name: disallow-selinux-cel
 version: 1.0.0
 displayName: Disallow SELinux in CEL expressions
 description: >-
