--- a/pod-security-cel/baseline/restrict-seccomp/artifacthub-pkg.yml
+++ b/pod-security-cel/baseline/restrict-seccomp/artifacthub-pkg.yml
@@ -1,4 +1,4 @@
-name: restrict-seccomp
+name: restrict-seccomp-cel
 version: 1.0.0
 displayName: Restrict Seccomp in CEL expressions
 description: >-
