--- a/pod-security-cel/baseline/restrict-sysctls/artifacthub-pkg.yml
+++ b/pod-security-cel/baseline/restrict-sysctls/artifacthub-pkg.yml
@@ -1,4 +1,4 @@
-name: restrict-sysctls
+name: restrict-sysctls-cel
 version: 1.0.0
 displayName: Restrict sysctls in CEL expressions
 description: >-
