--- a/other/s-z/update-image-tag/.chainsaw-test/chainsaw-step-01-apply-1.yaml
+++ b/other/s-z/update-image-tag/.chainsaw-test/chainsaw-step-01-apply-1.yaml
@@ -6,8 +6,8 @@ metadata:
     vault.hashicorp.com/agent-inject: "true"
   labels:
     app: busybox
-  namespace: update-image-tag-ns
   name: deployment00
+  namespace: update-image-tag-ns
 spec:
   replicas: 1
   selector:
@@ -21,5 +21,5 @@ spec:
       containers:
       - image: busybox:1.35
         name: busybox
-      - name: vault-agent
-        image: vault:1.2.3
+      - image: vault:1.2.3
+        name: vault-agent
