--- a/best-practices-cel/disallow-empty-ingress-host/disallow-empty-ingress-host.yaml
+++ b/best-practices-cel/disallow-empty-ingress-host/disallow-empty-ingress-host.yaml
@@ -3,9 +3,10 @@ kind: ClusterPolicy
 metadata:
   name: disallow-empty-ingress-host
   annotations:
-    policies.kyverno.io/title: Disallow empty Ingress host
-    policies.kyverno.io/category: Best Practices
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/title: Disallow empty Ingress host in CEL expressions
+    policies.kyverno.io/category: Best Practices in CEL 
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Ingress
     policies.kyverno.io/description: >-
@@ -13,7 +14,7 @@ metadata:
       in order to be valid. This policy ensures that there is a
       hostname for each rule defined.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Audit
   background: false
   rules:
     - name: disallow-empty-ingress-host
@@ -23,10 +24,10 @@ spec:
             kinds:
               - Ingress
       validate:
-        message: "The Ingress host name must be defined, not empty."
-        deny:
-          conditions:
-            all:
-            - key: "{{ request.object.spec.rules[].host || `[]` | length(@) }}"
-              operator: NotEquals
-              value: "{{ request.object.spec.rules[].http || `[]` | length(@) }}"
+        cel:
+          expressions:
+            - expression: >-
+                !has(object.spec.rules) || 
+                object.spec.rules.all(rule, has(rule.host) && has(rule.http))
+              message: "The Ingress host name must be defined, not empty."
+        
