--- a/best-practices-cel/require-drop-all/require-drop-all.yaml
+++ b/best-practices-cel/require-drop-all/require-drop-all.yaml
@@ -3,10 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: drop-all-capabilities
   annotations:
-    policies.kyverno.io/title: Drop All Capabilities
-    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/title: Drop All Capabilities in CEL expressions
+    policies.kyverno.io/category: Best Practices in CEL 
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.6.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
+    policies.kyverno.io/minversion: 1.11.0
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Capabilities permit privileged actions without giving full root access. All
@@ -15,7 +16,7 @@ metadata:
       ability. Note that this policy also illustrates how to cover drop entries in any
       case although this may not strictly conform to the Pod Security Standards.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: require-drop-all
@@ -24,19 +25,34 @@ spec:
         - resources:
             kinds:
               - Pod
-      preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: NotEquals
-          value: DELETE
+      celPreconditions:
+        - expression: "request.operation != 'DELETE'"
+          name: "Operation should not be DELETE"
       validate:
-        message: >-
-          Containers must drop `ALL` capabilities.
-        foreach:
-          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
-            deny:
-              conditions:
-                all:
-                - key: ALL
-                  operator: AnyNotIn
-                  value: "{{ element.securityContext.capabilities.drop[].to_upper(@) || `[]` }}"
+        cel:
+          expressions:
+            - expression: >-
+                object.spec.containers.all(container, 
+                has(container.securityContext) &&
+                has(container.securityContext.capabilities) &&
+                has(container.securityContext.capabilities.drop) &&
+                container.securityContext.capabilities.drop.exists(capability, capability.upperAscii() == 'ALL'))
+              message: "Containers must drop `ALL` capabilities."
+
+            - expression: >-
+                !has(object.spec.initContainers) ||
+                object.spec.initContainers.all(container, 
+                has(container.securityContext) &&
+                has(container.securityContext.capabilities) &&
+                has(container.securityContext.capabilities.drop) &&
+                container.securityContext.capabilities.drop.exists(capability, capability.upperAscii() == 'ALL'))
+              message: "Init containers must drop `ALL` capabilities."
+
+            - expression: >-
+                !has(object.spec.ephemeralContainers) ||
+                object.spec.ephemeralContainers.all(container, 
+                has(container.securityContext) &&
+                has(container.securityContext.capabilities) &&
+                has(container.securityContext.capabilities.drop) &&
+                container.securityContext.capabilities.drop.exists(capability, capability.upperAscii() == 'ALL'))
+              message: "Ephemeral containers must drop `ALL` capabilities."
