--- a/other/require-replicas-allow-disruption/require-replicas-allow-disruption.yaml
+++ b/other/require-replicas-allow-disruption/require-replicas-allow-disruption.yaml
@@ -7,12 +7,12 @@ metadata:
     policies.kyverno.io/category: Other
     kyverno.io/kyverno-version: 1.11.4
     kyverno.io/kubernetes-version: "1.27"
-    policies.kyverno.io/subject: PodDisruptionBudget, Deployment
+    policies.kyverno.io/subject: PodDisruptionBudget, Deployment, StatefulSet
     policies.kyverno.io/description: >-
       Existing PodDisruptionBudgets can apply to all future matching Pod controllers.
       If the minAvailable field is defined for such matching PDBs and is lower than the
-      replica count of a new Deployment, then availability could be negatively impacted.
-      This policy specifies that Deployment replicas exceed the minAvailable value of all
+      replica count of a new Deployment or StatefulSet, then availability could be negatively impacted.
+      This policy specifies that Deployment/StatefulSet replicas exceed the minAvailable value of all
       matching PodDisruptionBudgets which specify minAvailable as a number and not percentage.
 spec:
   validationFailureAction: Audit
@@ -24,6 +24,7 @@ spec:
       - resources:
           kinds:
           - Deployment
+          - StatefulSet
           operations:
           - CREATE
           - UPDATE
