--- a/best-practices/require-probes/.chainsaw-test/bad-pod-notall.yaml
+++ b/best-practices/require-probes/.chainsaw-test/bad-pod-notall.yaml
@@ -14,7 +14,7 @@ spec:
       tcpSocket:
         port: 8080
       periodSeconds: 10
-  - name: busybox
+  - name: busybox-again
     image: busybox:1.35
 ---
 apiVersion: v1
@@ -27,7 +27,7 @@ spec:
   containers:
   - name: busybox
     image: busybox:1.35
-  - name: busybox
+  - name: busybox-again
     image: busybox:1.35
     ports:
     - containerPort: 8080
