--- a/best-practices/disallow-empty-ingress-host/disallow-empty-ingress-host.yaml
+++ b/best-practices/disallow-empty-ingress-host/disallow-empty-ingress-host.yaml
@@ -13,7 +13,7 @@ metadata:
       in order to be valid. This policy ensures that there is a
       hostname for each rule defined.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: false
   rules:
     - name: disallow-empty-ingress-host
