--- a/other/check-vpa-configuration/check-vpa-configuration.yaml
+++ b/other/check-vpa-configuration/check-vpa-configuration.yaml
@@ -10,8 +10,10 @@ metadata:
     kyverno.io/kubernetes-version: "1.27"     
     policies.kyverno.io/subject: Deployment, StatefulSet, ReplicaSet, DaemonSet
     policies.kyverno.io/description: >-
-      This policy enforces that Deployments, StatefulSets, Replicasets, and DaemonSets have 
-      a corresponding VerticalPodAutoscaler to ensure potential automatic resource adjustments. 
+      VerticalPodAutoscaler (VPA) is useful to automatically adjust the resources assigned to Pods.
+      It requires defining a specific target resource by kind and name. There are no built-in
+      validation checks by the VPA controller to ensure that the target resource is associated with it. 
+      This policy ensures that the matching kind has a matching VPA. 
 spec:
   validationFailureAction: Audit
   background: false
@@ -25,31 +27,19 @@ spec:
               - StatefulSet
               - ReplicaSet
               - DaemonSet
-      validate:
-        message: >-
-          Workload '{{request.object.kind}}/{{request.object.metadata.name}}' 
-          requires a matching VerticalPodAutoscaler (VPA) in the 
-          '{{request.object.metadata.namespace}}' namespace.
-      context:
-      - name: metricsServer
-        apiCall:
-          urlPath: "/apis/metrics.k8s.io/v1beta1/namespaces/{{ request.namespace }}/pods"
-          jmesPath:  
-      preconditions:
-        any:
-        - key: "{{ metricsServer }}"
-          operator: GreaterThan
-          value: 0 
-        foreach:
-          - list: "request.object.kind"
-            context:
-              - name: vpas
-                apiCall:
-                  urlPath: "/apis/autoscaling.k8s.io/v1/namespaces/{{request.object.metadata.namespace}}/verticalpodautoscalers"
-                  jmesPath: "items[?spec.targetRef.kind=='{{ request.object.kind }}'].spec.targetRef.name"
-            validate:
+          context:
+            - name: vpas
+              apiCall:
+                urlPath: "/apis/autoscaling.k8s.io/v1/namespaces/{{request.object.metadata.namespace}}/verticalpodautoscalers"
+                jmesPath: "items[?spec.targetRef.kind=='{{ request.object.kind }}'].spec.targetRef.name"
+          validate:
+            message: >-
+              Workload '{{request.object.kind}}/{{request.object.metadata.name}}' 
+              requires a matching VerticalPodAutoscaler (VPA) in the 
+              '{{request.object.metadata.namespace}}' namespace.
+            deny:
               conditions:
                 all:
-                  - key: "{{ request.object.metadata.name }}" 
-                    operator: NotIn 
-                    value: "{{ vpas }}"
+                - key: "{{ request.object.metadata.name }}" 
+                  operator: NotIn 
+                  value: "{{ vpas }}"
