--- a/other-cel/enforce-pod-duration/enforce-pod-duration.yaml
+++ b/other-cel/enforce-pod-duration/enforce-pod-duration.yaml
@@ -3,16 +3,17 @@ kind: ClusterPolicy
 metadata:
   name: pod-lifetime
   annotations:
-    policies.kyverno.io/title: Enforce pod duration
-    policies.kyverno.io/category: Sample
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/title: Enforce pod duration in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       This validation is valuable when annotations are used to define durations,
       such as to ensure a Pod lifetime annotation does not exceed some site specific max threshold.
       Pod lifetime annotation can be no greater than 8 hours.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: pods-lifetime
@@ -22,10 +23,13 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "Pod lifetime exceeds limit of 8h"
-      deny:
-        conditions:
-          any:
-          - key: "{{ request.object.metadata.annotations.\"pod.kubernetes.io/lifetime\" || '0s' }}"
-            operator: GreaterThan
-            value: "8h"
+      cel:
+        variables:
+          - name: hasLifetimeAnnotation
+            expression: "has(object.metadata.annotations) && 'pod.kubernetes.io/lifetime' in object.metadata.annotations"
+          - name: lifetimeAnnotationValue
+            expression: "variables.hasLifetimeAnnotation ? object.metadata.annotations['pod.kubernetes.io/lifetime'] : '0s'"
+        expressions:
+          - expression: "!(duration(variables.lifetimeAnnotationValue) > duration('8h'))"
+            message: "Pod lifetime exceeds limit of 8h"
+
